--- a/.flt/root.yaml
+++ b/.flt/root.yaml
@@ -16,6 +16,11 @@ commands:
 - name: check
   short: Check apps
 
+  scriptCommands:
+    - name: flux
+      short: Check flux
+      path: check/flux
+
   bashCommands:
     - name: heartbeat
       short: Check heartbeat pods
