--- a/deploy/webv/deployment.yaml
+++ b/deploy/webv/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: ghcr.io/cse-labs/res-edge-webv0.12
+          image: ghcr.io/cse-labs/res-edge-webv:0.12
           imagePullPolicy: Always
           ports:
             - name: http
