--- a/clusters/central-la-nola-2301/flux-system/listeners/kustomization-redis.yaml
+++ b/clusters/central-la-nola-2301/flux-system/listeners/kustomization-redis.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: imdb
+  name: redis
   namespace: flux-system
 spec:
   interval: 1m0s
-  path: ./clusters/central-la-nola-2301/imdb
+  path: ./clusters/central-la-nola-2301/redis
   prune: true
   sourceRef:
     kind: GitRepository
