--- a/deploy/mssql/deployment.yaml
+++ b/deploy/mssql/deployment.yaml
@@ -33,11 +33,11 @@ spec:
             memory: 2Gi
             cpu: 500m
 
-        # volumeMounts:
-        # - name: mssql
-        #   mountPath: /var/opt/mssql
+        volumeMounts:
+        - name: mssql
+          mountPath: /var/opt/mssql
 
-      # volumes:
-      # - name: mssql
-      #   persistentVolumeClaim:
-      #     claimName: mssql
+      volumes:
+      - name: mssql
+        persistentVolumeClaim:
+          claimName: mssql
