--- a/apps/imdb/kustomize/prod/overlays/1.0.1/kustomization.yaml
+++ b/apps/imdb/kustomize/prod/overlays/1.0.1/kustomization.yaml
@@ -1,14 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 metadata:
   annotations:
-    clusters: stores
-
+    version: 1.0.1
+    clusters: beta
 resources:
-  - service.yaml
-  - deployment.yaml
+- ../../base
 
 images:
-- name: ghcr.io/cse-labs/imdb
-  newTag: 1.0.0
+- name:  ghcr.io/cse-labs/imdb
+  newTag: 1.0.1
