--- a/deploy/api/deployment.yaml
+++ b/deploy/api/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: app
-        image: ghcr.io/cse-labs/res-edge:0.15
+        image: ghcr.io/cse-labs/res-edge-api:0.15
         imagePullPolicy: Always
         ports:
           - name: http
